test: add tests for assigntaskcommand